--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,10 @@ jobs:
           mysql password: 'Sch_t3st_#3#_pwd' # Required if "mysql user" exists. The password for the "mysql user"
       - run: mysql --version
       - run: ls
-      - run: sudo apt-get install libmysqlclient-dev
-      - run: sudo apt-get install zlib1g-dev
-      - run: sudo pip3 install mysqlclient
-      - run: sudo pip3 install SQLAlchemy
+      - run: apt-get install libmysqlclient-dev
+      - run: apt-get install zlib1g-dev
+      - run: pip3 install mysqlclient
+      - run: pip3 install SQLAlchemy
       - name: set test env variables
         run: export SH_USER='sh_test_user'; export SH_PWD='Sch_t3st_#3#_pwd'; export SH_HOST='localhost'; export SH_DATABASE='sh_test_db'; export SH_ENV='test';
       - name: start test
