--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,12 @@ on:
 jobs:
   run-test:
     runs-on: ubuntu-latest
+    env:
+        SH_HOST: 'localhost'
+        SH_PWD: 'Sch_t3st_#3#_pwd'
+        SH_USER: 'sh_test_user'
+        SH_ENV: 'test'
+        SH_DATABASE: 'sh_test_db'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
@@ -31,7 +37,5 @@ jobs:
       - run: sudo apt-get install zlib1g-dev
       - run: pip3 install mysqlclient
       - run: pip3 install SQLAlchemy
-      - name: set test env variables
-        run: export SH_USER='sh_test_user'; export SH_PWD='Sch_t3st_#3#_pwd'; export SH_HOST='localhost'; export SH_DATABASE='sh_test_db'; export SH_ENV='test';
       - name: start test
         run: python3 -m unittest discover
