--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,8 +29,8 @@ jobs:
           mysql version: '8.0' # Optional, default value is "latest". The version of the MySQL
           mysql database: 'sh_test_db' # Optional, default value is "test". The specified database which will be create
           mysql root password: 'password' # Required if "mysql user" is empty, default is empty. The root superuser password
-          mysql user: 'developer' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
-          mysql password: 'Sch_#3#_pwd' # Required if "mysql user" exists. The password for the "mysql user"
+          mysql user: 'sh_user' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
+          mysql password: 'password' # Required if "mysql user" exists. The password for the "mysql user"
       - run: mysql --version
       - run: ls
       - run: sudo apt-get install libmysqlclient-dev
@@ -38,6 +38,6 @@ jobs:
       - run: pip3 install mysqlclient
       - run: pip3 install SQLAlchemy
       - run: sudo systemctl start mysql.service
-      - run: cat setup_mysql_test.sql | sudo mysql -u root --password=password
+      - run: cat setup_mysql_test.sql | sudo mysql -u sh_user --password=password
       - name: start test
         run: python3 -m unittest discover
