--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,6 @@ jobs:
       - run: pip3 install mysqlclient
       - run: pip3 install SQLAlchemy
       - run: sudo systemctl start mysql.service
-      - run: cat setup_mysql_test.sql | sudo mysql
+      - run: echo 'show databases; exit'  | sudo mysql
       - name: start test
         run: python3 -m unittest discover
