--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,10 +25,9 @@ jobs:
       - run: ls
       - run: sudo apt-get install libmysqlclient-dev
       - run: sudo apt-get install zlib1g-dev
-      - run: pip3 install mysqlclient
+      - run: pip3 install mysqlclient -y
       - run: pip3 install SQLAlchemy
       - run: sudo systemctl start mysql
-      - run: mysql -u root -e "ALTER USER 'root'@'localhost' IDENTIFIED BY 'password';"
-      - run: cat setup_mysql_test.sql  | sudo mysql -u root -ppassword
+      - run: cat setup_mysql_test.sql  | sudo mysql -u root
       - name: start test
         run: python3 -m unittest discover
