--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,17 @@ jobs:
         with:
           python-version: "3.8"
           
-      - run: sudo apt install mysql-server -y
+      - uses: mirromutth/mysql-action@v1.1
+        with:
+          host port: 3306 # Optional, default value is 3306. The port of host
+          container port: 3306 # Optional, default value is 3306. The port of container
+          character set server: 'utf8' # Optional, default value is 'utf8mb4'. The '--character-set-server' option for mysqld
+          collation server: 'utf8_general_ci' # Optional, default value is 'utf8mb4_general_ci'. The '--collation-server' option for mysqld
+          mysql version: '8.0' # Optional, default value is "latest". The version of the MySQL
+          mysql database: 'sh_test_db' # Optional, default value is "test". The specified database which will be create
+          mysql root password: 'password' # Required if "mysql user" is empty, default is empty. The root superuser password
+          mysql user: 'developer' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
+          mysql password: 'me' # Required if "mysql user" exists. The password for the "mysql user"
       - run: mysql --version
       - run: ls
       - run: sudo apt-get install libmysqlclient-dev
@@ -28,6 +38,6 @@ jobs:
       - run: pip3 install mysqlclient
       - run: pip3 install SQLAlchemy
       - run: sudo systemctl start mysql
-      - run: mysql -u root
+      - run: mysql -u root -ppassword
       - name: start test
         run: python3 -m unittest discover
