--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
       - run: sudo apt-get install zlib1g-dev
       - run: pip3 install mysqlclient
       - run: pip3 install SQLAlchemy
-      - run: sudo sytemctl start mysql.service
-      - run: mysql -u root -ppassword
+      - run: sudo systemctl start mysql.service
+      - run: mysql -u root --password=password
       - name: start test
         run: python3 -m unittest discover
