--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,16 +21,11 @@ jobs:
           python-version: "3.8"
           
       - uses: mirromutth/mysql-action@v1.1
-        with:
-          host port: 3306 # Optional, default value is 3306. The port of host
-          container port: 3306 # Optional, default value is 3306. The port of container
-          character set server: 'utf8' # Optional, default value is 'utf8mb4'. The '--character-set-server' option for mysqld
-          collation server: 'utf8_general_ci' # Optional, default value is 'utf8mb4_general_ci'. The '--collation-server' option for mysqld
-          mysql version: '8.0' # Optional, default value is "latest". The version of the MySQL
-          mysql database: 'sh_test_db' # Optional, default value is "test". The specified database which will be create
-          mysql root password: 'password' # Required if "mysql user" is empty, default is empty. The root superuser password
-          mysql user: 'developer' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
-          mysql password: 'me' # Required if "mysql user" exists. The password for the "mysql user"
+      - run: sudo debconf-set-selections <<< 'mysql-server-8.0 mysql-server/root_password password password'
+      - run: sudo debconf-set-selections <<< 'mysql-server-8.0 mysql-server/root_password_again password password'
+      - run: sudo apt-get update
+      - run: sudo apt-get install -y mysql-server-8.0
+
       - run: mysql --version
       - run: ls
       - run: sudo apt-get install libmysqlclient-dev
