--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,6 @@ jobs:
       - run: pip3 install mysqlclient
       - run: pip3 install SQLAlchemy
       - run: sudo systemctl start mysql.service
-      - run: mysql -u root --password=password
+      - run: mysql -u root --password='password'
       - name: start test
         run: python3 -m unittest discover
