--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,8 +20,8 @@ jobs:
         with:
           python-version: "3.8"
         
-      - run: sudo debconf-set-selections <<< 'mysql-server-8.0 mysql-server/root_password password'
-      - run: sudo debconf-set-selections <<< 'mysql-server-8.0 mysql-server/root_password_again password'
+      - run: sudo debconf-set-selections <<< 'mysql-server-8.0 mysql-server/root_password Sch_t3st_#3#_pwd'
+      - run: sudo debconf-set-selections <<< 'mysql-server-8.0 mysql-server/root_password_again Sch_t3st_#3#_pwd'
       - run: sudo apt-get update
       - run: sudo apt-get install -y mysql-server-8.0
 
@@ -32,6 +32,6 @@ jobs:
       - run: pip3 install mysqlclient
       - run: pip3 install SQLAlchemy
       - run: sudo systemctl start mysql.service
-      - run: mysql -u root --password='password'
+      - run: mysql -u root --password='Sch_t3st_#3#_pwd'
       - name: start test
         run: python3 -m unittest discover
