--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,6 @@ jobs:
       - run: sudo apt-get install zlib1g-dev
       - run: pip3 install mysqlclient
       - run: pip3 install SQLAlchemy
-      - run: mysql -u root --password=${{ secrets.DatabasePassword }}
+      - run: mysql -p 3800 -u root --password=${{ secrets.DatabasePassword }}
       - name: start test
         run: python3 -m unittest discover
