--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,6 +19,9 @@ jobs:
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
+    - name: Start MySQL service
+      run: docker-compose up -d
+      working-directory: .
     - uses: actions/checkout@v2
     - name: Set up Python
       uses: actions/setup-python@v2
