--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,25 +19,14 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: "3.8"
-
-      - uses: mirromutth/mysql-action@v1.1
-        with:
-          host port: 3800 # Optional, default value is 3306. The port of host
-          container port: 3307 # Optional, default value is 3306. The port of container
-          character set server: 'utf8' # Optional, default value is 'utf8mb4'. The '--character-set-server' option for mysqld
-          collation server: 'utf8_general_ci' # Optional, default value is 'utf8mb4_general_ci'. The '--collation-server' option for mysqld
-          mysql version: '8.0' # Optional, default value is "latest". The version of the MySQL
-          mysql database: 'sh_test_db' # Optional, default value is "test". The specified database which will be create
-          mysql root password: 'password' # Required if "mysql user" is empty, default is empty. The root superuser password
-          mysql user: 'developer' # Required if "mysql root password" is empty, default is empty. The superuser for the specified database. Can use secrets, too
-          mysql password: 'me' # Required if "mysql user" exists. The password for the "mysql user"
       - run: mysql --version
+      - run: which mysql
       - run: ls
       - run: sudo apt-get install libmysqlclient-dev
       - run: sudo apt-get install zlib1g-dev
       - run: pip3 install mysqlclient
       - run: pip3 install SQLAlchemy
       - run: sudo systemctl start mysql.service
-      - run: cat setup_mysql_test.sql | sudo mysql -u root --password=password
+      - run: cat setup_mysql_test.sql | sudo mysql -u root --password=root
       - name: start test
         run: python3 -m unittest discover
