--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,7 @@ jobs:
       - run: sudo apt-get install libmysqlclient-dev
       - run: sudo apt-get install zlib1g-dev
       - run: pip3 install mysqlclient
+      - run: pip3 install flask_bcrypt
       - run: pip3 install SQLAlchemy
       - run: sudo systemctl start mysql.service
       - run: pip3 install Flask
