--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,18 +20,13 @@ jobs:
         with:
           python-version: "3.8"
       - run: mysql --version
-      - run: which mysql
-      - run: ls
       - run: sudo apt-get install libmysqlclient-dev
       - run: sudo apt-get install zlib1g-dev
-      - run: pip3 install mysqlclient
-      - run: pip3 install flask_bcrypt
-      - run: pip3 install SQLAlchemy
+      - run: pip3 install -r requirements.txt
       - run: sudo systemctl start mysql.service
-      - run: pip3 install Flask
       - run: cat setup_mysql_test.sql | sudo mysql -u root --password=root
       - name: start test
-        run: python3 -m unittest discover
+        run: pytest
   deplay-app:
     runs-on: ubuntu-latest
     needs: run-test
